[gd_scene load_steps=4 format=3 uid="uid://bfii1m6aw4ga7"]

[ext_resource type="Script" uid="uid://cbb7kjgipgwx0" path="res://wall/explodable wall.gd" id="1_4nv8l"]
[ext_resource type="Texture2D" uid="uid://cnvb4qw45inh7" path="res://wall/WallSprite.svg" id="2_motgo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4nv8l"]
size = Vector2(383, 381)

[node name="explodableWall" type="StaticBody2D"]
position = Vector2(233, 160)
script = ExtResource("1_4nv8l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 7.5)
shape = SubResource("RectangleShape2D_4nv8l")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.05000007, 1, 0, 1)
position = Vector2(-21, -8)
texture = ExtResource("2_motgo")

[node name="explosionTimer" type="Timer" parent="."]
wait_time = 0.87
one_shot = true

[node name="explostionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 1000
one_shot = true
preprocess = 0.2
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 680.41
scale_amount_min = 0.0
scale_amount_max = 5.0
color = Color(0.050980393, 0.44313726, 0, 1)

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="explosionTimer" to="." method="_on_explosion_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
